--- a/notesandreminders.client/src/note/note.component.html
+++ b/notesandreminders.client/src/note/note.component.html
@@ -1,29 +1,39 @@
-<input type="button" value="Добавить" class="btn btn-primary" (click)="add()" />
-<table *ngIf="tableMode; else create" class="table table-striped">
-  <thead>
-    <tr>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let p of notes">
-      <ng-template [ngIf]="note.noteId != p.noteId" [ngIfElse]="edit">
-        <td>
-          <h2> {{p?.header}} </h2>
-          <p>{{p?.description}}</p>
-        </td>
-        <td>
-          <div class="btn-group">
-            <button class="btn btn-sm btn-primary" (click)="editNote(p)">Изменить</button>
-            <button class="btn btn-sm btn-danger" (click)="delete(p)">Удалить</button>
-          </div>
-        </td>
-      </ng-template>
-    </tr>
-  </tbody>
-</table>
+<div class="container">
+  <div class="row p-1">
+    <h1>Ваши Заметки</h1>
+  </div>
+  <div class="row p-1">
+    <div class="col-2">
+      <input type="button" value="Добавить" class="btn btn-primary" (click)="add()" />
+    </div>
+  </div>
+  <div class="row p-1">
+    <table *ngIf="tableMode; else create" class="table table-striped">
+      <thead>
+        <tr>
+          <td></td>
+          <td></td>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let p of notes">
+          <ng-template [ngIf]="note.noteId != p.noteId" [ngIfElse]="edit">
+            <td>
+              <h2> {{p?.header}} </h2>
+              <p>{{p?.description}}</p>
+            </td>
+            <td>
+              <div class="btn-group">
+                <button class="btn btn-sm btn-primary" (click)="editNote(p)">Изменить</button>
+                <button class="btn btn-sm btn-danger" (click)="delete(p)">Удалить</button>
+              </div>
+            </td>
+          </ng-template>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
 
 <!--шаблон для редактирования-->
 <ng-template #edit>
@@ -34,7 +44,7 @@
     <input type="text" [(ngModel)]="note.description" class="form-control" />
   </td>
   <td>
-    <div class="btn-group">
+    <div class="btn-group form-control">
       <input type="button" value="Сохранить" (click)="save()" class="btn btn-sm btn-success" />
       <input type="button" value="Отмена" (click)="cancel()" class="btn btn-sm btn-warning" />
     </div>
@@ -52,7 +62,7 @@
     <input type="text" [(ngModel)]="note.description" class="form-control" />
   </div>
   <div>
-    <div class="btn-group">
+    <div class="btn-group p-2">
       <input type="button" value="Сохранить" (click)="save()" class="btn btn-success" />
       <input type="button" value="Отмена" (click)="cancel()" class="btn btn-warning" />
     </div>
