--- a/notesandreminders.client/src/note/note.component.html
+++ b/notesandreminders.client/src/note/note.component.html
@@ -44,7 +44,7 @@
     <input type="text" [(ngModel)]="note.description" class="form-control" />
   </td>
   <td>
-    <div class="btn-group form-control">
+    <div class="btn-group">
       <input type="button" value="Сохранить" (click)="save()" class="btn btn-sm btn-success" />
       <input type="button" value="Отмена" (click)="cancel()" class="btn btn-sm btn-warning" />
     </div>
