добавил тестовый выпадающий список

--- a/notesandreminders.client/src/note/note.component.html
+++ b/notesandreminders.client/src/note/note.component.html
@@ -47,6 +47,16 @@
     <input type="text" [(ngModel)]="note.description" class="form-control" />
   </td>
   <td>
+    <!-- Using Items Input -->
+    <ng-select [items]="cars"
+               bindLabel="name"
+               placeholder="Select Tags"
+               appendTo="body"
+               [multiple]="true"
+               [(ngModel)]="note.tags">
+    </ng-select>
+  </td>
+  <td>
     <div class="btn-group">
       <input type="button" value="Сохранить" (click)="save()" class="btn btn-sm btn-success" />
       <input type="button" value="Отмена" (click)="cancel()" class="btn btn-sm btn-warning" />
@@ -63,6 +73,16 @@
   <div class="form-group">
     <label>Содержание</label>
     <input type="text" [(ngModel)]="note.description" class="form-control" />
+  </div>
+  <div>
+    <!-- Using Items Input -->
+    <ng-select [items]="cars"
+               bindLabel="name"
+               placeholder="Select Tags"
+               appendTo="body"
+               [multiple]="true"
+               [(ngModel)]="note.tags">
+    </ng-select>
   </div>
   <div>
     <div class="btn-group p-2">
