--- a/notesandreminders.client/src/note/note.component.html
+++ b/notesandreminders.client/src/note/note.component.html
@@ -25,7 +25,7 @@
                 #{{f?.tagName}}
               </p>-->
             </td>
-            <td>
+            <td class="col-button">
               <div class="btn-group">
                 <button class="btn btn-sm btn-primary" (click)="editNote(p)">Изменить</button>
                 <button class="btn btn-sm btn-danger" (click)="delete(p)">Удалить</button>
@@ -56,7 +56,7 @@
                [(ngModel)]="note.tags">
     </ng-select>
   </td>-->
-  <td>
+  <td class="col-button">
     <div class="btn-group">
       <input type="button" value="Сохранить" (click)="save()" class="btn btn-sm btn-success" />
       <input type="button" value="Отмена" (click)="cancel()" class="btn btn-sm btn-warning" />
