--- a/notesandreminders.client/src/tage/tage.component.html
+++ b/notesandreminders.client/src/tage/tage.component.html
@@ -8,29 +8,31 @@
     </div>
   </div>
   <div class="row p-1">
-    <table *ngIf="tableMode; else create" class="table table-striped">
-      <thead>
-        <tr>
-          <td></td>
-          <td></td>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let p of tages">
-          <ng-template [ngIf]="tage.tagId != p.tagId" [ngIfElse]="edit">
-            <td>
-              <p> {{p?.tagName}} </p>              
-            </td>
-            <td>
-              <div class="btn-group">
-                <button class="btn btn-sm btn-primary" (click)="editTage(p)">Изменить</button>
-                <button class="btn btn-sm btn-danger" (click)="delete(p)">Удалить</button>
-              </div>
-            </td>
-          </ng-template>
-        </tr>
-      </tbody>
-    </table>
+    <div class="col-3">
+      <table *ngIf="tableMode; else create" class="table table-striped">
+        <thead>
+          <tr>
+            <td></td>
+            <td></td>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let p of tages">
+            <ng-template [ngIf]="tage.tagId != p.tagId" [ngIfElse]="edit">
+              <td>
+                <p> {{p?.tagName}} </p>
+              </td>
+              <td class="col-button">
+                <div class="btn-group">
+                  <button class="btn btn-sm btn-primary" (click)="editTage(p)">Изменить</button>
+                  <button class="btn btn-sm btn-danger" (click)="delete(p)">Удалить</button>
+                </div>
+              </td>
+            </ng-template>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
 </div>
 
@@ -38,8 +40,8 @@
 <ng-template #edit>
   <td>
     <input type="text" [(ngModel)]="tage.tagName" class="form-control" />
-  </td>  
-  <td>
+  </td>
+  <td class="col-button">
     <div class="btn-group">
       <input type="button" value="Сохранить" (click)="save()" class="btn btn-sm btn-success" />
       <input type="button" value="Отмена" (click)="cancel()" class="btn btn-sm btn-warning" />
@@ -52,7 +54,7 @@
   <div class="form-group">
     <label>Название тэга</label>
     <input type="text" [(ngModel)]="tage.tagName" class="form-control" />
-  </div>  
+  </div>
   <div>
     <div class="btn-group p-2">
       <input type="button" value="Сохранить" (click)="save()" class="btn btn-success" />
