--- a/notesandreminders.client/src/note/note.component.html
+++ b/notesandreminders.client/src/note/note.component.html
@@ -21,8 +21,8 @@
             <td>
               <h2> {{p?.header}} </h2>
               <p>{{p?.description}}</p>
-              <!--<p *ngFor="let f of p.tags">
-                #{{f?.tagName}}
+              <!--<p *ngFor="let f of p.noteTags">
+                #{{f.tag.tagName?}}
               </p>-->
             </td>
             <td class="col-button">
@@ -46,16 +46,16 @@
   <td>
     <input type="text" [(ngModel)]="note.description" class="form-control" />
   </td>
-  <!--<td>-->
-    <!-- Using Items Input -->
-    <!--<ng-select [items]="cars"
+  <td>
+     Using Items Input 
+    <ng-select [items]="cars"
                bindLabel="name"
                placeholder="Select Tags"
                appendTo="body"
                [multiple]="true"
-               [(ngModel)]="note.tags">
+               [(ngModel)]="note.noteTags">
     </ng-select>
-  </td>-->
+  </td>
   <td class="col-button">
     <div class="btn-group">
       <input type="button" value="Сохранить" (click)="save()" class="btn btn-sm btn-success" />
