--- a/notesandreminders.client/src/note/note.component.html
+++ b/notesandreminders.client/src/note/note.component.html
@@ -48,8 +48,8 @@
   </td>
   <td>
      <!--Using Items Input--> 
-    <ng-select [items]="cars"
-               bindLabel="name"
+    <ng-select [items]="tages"
+               bindLabel="tagName"
                placeholder="Select Tags"
                appendTo="body"
                [multiple]="true"
@@ -80,7 +80,7 @@
   </div>
   <div>
    <!--Using Items Input--> 
-  <ng-select [items]="cars"
+  <ng-select [items]="tages"
                bindLabel="tagName"
                placeholder="Select Tags"
                appendTo="body"
