--- a/notesandreminders.client/src/note/note.component.html
+++ b/notesandreminders.client/src/note/note.component.html
@@ -11,8 +11,9 @@
     <table *ngIf="tableMode; else create" class="table table-striped">
       <thead>
         <tr>
-          <td></td>
-          <td></td>
+          <th>Заметка</th>
+          <th>Тэги</th>
+          <th></th>
         </tr>
       </thead>
       <tbody>
@@ -21,6 +22,8 @@
             <td>
               <h2> {{p?.header}} </h2>
               <p>{{p?.description}}</p>
+            </td>
+            <td>
               <p *ngFor="let f of p.tags">
                 #{{f?.tagName}}
               </p>
@@ -74,19 +77,20 @@
     <label>Содержание</label>
     <input type="text" [(ngModel)]="note.description" class="form-control" />
   </div>
-  <div class="form-group">
-    <label>Срок</label>
-    <input class="form-control" type="datetime-local" [(ngModel)]="note.dateCreate" placeholder="Срок выполнения" id="example-datetime-local-input">
-  </div>
   <div>
-   <!--Using Items Input--> 
-  <ng-select [items]="tages"
+    <label>Добавте тэги</label>
+    <!--Using Items Input-->
+    <ng-select [items]="tages"
                bindLabel="tagName"
                placeholder="Select Tags"
                appendTo="body"
                [multiple]="true"
                [(ngModel)]="note.tags">
     </ng-select>
+  </div>
+  <div class="form-group col-3">
+    <label>Срок</label>
+    <input class="form-control" type="datetime-local" [(ngModel)]="note.dateCreate" placeholder="Срок выполнения" id="example-datetime-local-input">
   </div>
   <div>
     <div class="btn-group p-2">
