--- a/notesandreminders.client/src/tage/tage.component.html
+++ b/notesandreminders.client/src/tage/tage.component.html
@@ -8,11 +8,11 @@
     </div>
   </div>
   <div class="row p-1">
-    <div class="col-3">
+    <div class="col-4">
       <table *ngIf="tableMode; else create" class="table table-striped">
         <thead>
           <tr>
-            <td></td>
+            <th>Название тэга</th>
             <td></td>
           </tr>
         </thead>
