исправил ошибку в теги ng-select

--- a/notesandreminders.client/src/note/note.component.html
+++ b/notesandreminders.client/src/note/note.component.html
@@ -63,7 +63,7 @@
                appendTo="body"
                [multiple]="true"
                [(ngModel)]="note.tags"
-               [ngModelOptions]="{standalone: true}>
+               [ngModelOptions]="{standalone: true}">
     </ng-select>
   </td>
   <td class="col-button">
