--- a/notesandreminders.client/src/app/app.component.html
+++ b/notesandreminders.client/src/app/app.component.html
@@ -1,24 +1,21 @@
-<h1 id="tableLabel">Weather forecast</h1>
-
-<p>This component demonstrates fetching data from the server.</p>
-
-<p *ngIf="!forecasts"><em>Loading... Please refresh once the ASP.NET backend has started. See <a href="https://aka.ms/jspsintegrationangular">https://aka.ms/jspsintegrationangular</a> for more details.</em></p>
-
-<table *ngIf="forecasts">
-    <thead>
-        <tr>
-            <th>Date</th>
-            <th>Temp. (C)</th>
-            <th>Temp. (F)</th>
-            <th>Summary</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let forecast of forecasts">
-            <td>{{ forecast.date }}</td>
-            <td>{{ forecast.temperatureC }}</td>
-            <td>{{ forecast.temperatureF }}</td>
-            <td>{{ forecast.summary }}</td>
-        </tr>
-    </tbody>
-</table>
+<h1>Напоминания и заметки</h1>
+<!-- Nav tabs -->
+<ul class="nav nav-tabs" id="myTab" role="tablist">
+  <li class="nav-item" role="presentation">
+    <button class="nav-link active" id="note-tab" data-bs-toggle="tab" data-bs-target="#note" type="button" role="tab" aria-controls="note" aria-selected="true">Заметки</button>
+  </li>
+  <li class="nav-item" role="presentation">
+    <button class="nav-link" id="tage-tab" data-bs-toggle="tab" data-bs-target="#tage" type="button" role="tab" aria-controls="tage" aria-selected="false">Тэги</button>
+  </li>
+  <li class="nav-item" role="presentation">
+    <button class="nav-link" id="reminder-tab" data-bs-toggle="tab" data-bs-target="#reminder" type="button" role="tab" aria-controls="reminder" aria-selected="false">Напоминания</button>
+  </li>
+</ul>
+<!-- Nav tabs -->
+<!-- Tabs content -->
+<div class="tab-content" id="myTabContent">
+  <div class="tab-pane fade show active" id="note" role="tabpanel" aria-labelledby="note-tab">     <app-note>...</app-note>        </div>
+  <div class="tab-pane fade" id="tage" role="tabpanel" aria-labelledby="tage-tab">     <app-tage>...</app-tage>        </div>
+  <div class="tab-pane fade" id="reminder" role="tabpanel" aria-labelledby="reminder-tab"> <app-reminder>...</app-reminder></div>
+</div>
+<!-- Tabs content -->
