--- a/notesandreminders.client/src/app/app.component.css
+++ b/notesandreminders.client/src/app/app.component.css
@@ -1,22 +1,50 @@
-﻿:host {
-    max-width: 1280px;
-    padding: 2rem;
-    text-align: center;
+:host {
+  max-width: 1280px;
+  padding: 2rem;
+  text-align: center;
 }
 
 tr:nth-child(even) {
-    background: #F2F2F2;
+  background: #F2F2F2;
 }
 
 tr:nth-child(odd) {
-    background: #FFF;
+  background: #FFF;
 }
 
 th, td {
-    padding-left: 1rem;
-    padding-right: 1rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 table {
-    margin: 0 auto;
+  margin: 0 auto;
 }
+
+.nav-link {
+  background: #8094c2;
+  color: #000000;
+}
+
+.nav-tabs .nav-link {
+  border: none;
+}
+
+.nav-link.active, .tab-pane {
+  background: #cf9878;
+}
+
+.tab-pane {
+  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+.container {
+  padding: 10px;
+}
+
+td, .col-button {
+  vertical-align: middle;
+}
+
